# ledgerflow

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  build.gradle.kts  compose.yaml  generate_operations.py  gradle.properties  patch_openapi.py  settings.gradle.kts
.agent/: PLANS.md
.github/: dependabot.yml
ai-assistant/: .env.example  pyproject.toml
ai-assistant/src/ai_assistant/: config.py  main.py  models.py  prompt.py  runbooks.py  sanitizer.py  service.py
ai-assistant/src/ai_assistant/providers/: base.py  deepseek_provider.py  fake.py  openai_provider.py
ai-assistant/tests/: test_config.py  test_deepseek_provider_secrets_never_sent.py  test_eval_fixtures.py  test_fake_provider.py  test_main.py  test_openai_provider_secrets_never_sent.py  test_prompt_construction.py  test_runbooks.py  test_sanitizer.py
ai-assistant/tests/fixtures/: eval_cases.json
application/: build.gradle.kts
docs/: ai-operations-assistant.md  api-design.md  architecture.md  aws-database-identity-runbook.md  aws-terraform-design.md  branch-protection.md  container-hardening.md  data-model.md  definition-of-done.md  demo-script.md  dependency-inventory.md  deployment-security.md  development-workflow.md  domain-model.md  failure-injection.md  interview-guide.md  kubernetes-deployment.md  migration-inventory.md  mvp-evidence.md  mvp-review.md  observability-runbook.md  observability.md  operational-limitations.md  performance-experiments.md  product-requirements.md  pull-request-summary.md  residual-risks.md  resume-bullets.md  runbook-index.md  (+4 more)
(+462 files in other folders)
