[project]
name = "ledgerflow-ai-assistant"
version = "0.1.0"
description = "Optional AI incident-summary assistant for LedgerFlow operations (fake provider by default; OpenAI Responses API optional)."
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.139.2",
  "uvicorn==0.51.0",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.2",
  "openai==2.46.0",
  "httpx==0.28.1",
]

[project.optional-dependencies]
dev = [
  "pytest==9.1.1",
  "ruff==0.15.22",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Runbook corpus text is transcribed verbatim from docs/observability-runbook.md; wrapping it
# would risk introducing a mismatch with the source it's checked against.
"src/ai_assistant/runbooks.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
